<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".OrderActivity">

        <!-- Judul Halaman -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_food"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <!-- Input Nama Makanan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_label"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/etFoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_enter"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Input Jumlah Porsi -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servings_label"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etServings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/servings_enter"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Input Jumlah Porsi -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name_label"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_name_enter"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>


        <!-- Input Catatan Tambahan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_label"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes_enter"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Tombol Order -->
        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:textColor="@android:color/black"
            android:padding="12dp"/>

</LinearLayout>