<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ConfirmationActivity">

    <!-- Judul Halaman -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_food"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <!-- Confirmation Nama Makanan -->
    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Food Name: Batagor"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <!-- Confirmation Jumlah Porsi -->
    <TextView
        android:id="@+id/tvServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of Servings: 2 pax"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <!-- Confirmation Nama pengorder -->
    <TextView
        android:id="@+id/tvOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ordering Name: Usep"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <!-- Input Catatan Tambahan -->
    <TextView
        android:id="@+id/tvNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Additional Notes: Tidak Pedas"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <!-- Input Catatan Tambahan -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/backtoMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_menu"
        android:textColor="@color/black"/>

</LinearLayout>